improvement: finished getWeather handler
