# cmd/server/docs/swagger.json
@@ -33,7 +33,7 @@
                     "200": {
                         "description": "Successful operation - current weather forecast returned",
                         "schema": {
-                            "$ref": "#/definitions/weather.Weather"
+                            "$ref": "#/definitions/internal_server_handlers_weather.Weather"
                         }
                     },
                     "400": {
@@ -53,7 +53,7 @@
         }
     },
     "definitions": {
-        "weather.Weather": {
+        "internal_server_handlers_weather.Weather": {
             "type": "object",
             "properties": {
                 "description": {
